--- a/index.html
+++ b/index.html
@@ -1,3 +1,63 @@
+<!doctype.html>
 <html>
-        hello
-    </html>
+<link rel = "StyleSheet" href = "coffee_main.css"/>
+<link rel="shortcut icon" href="C:\Users\ahmed\OneDrive\Desktop\imag\tiny-coffee-cup.gif"/>
+<script src = "coffee_java.js"></script>
+<head>
+<title>
+Article on Coffee
+</title>
+</head>
+<body>
+<div id = "centralize">
+<figure>
+<div id = "image">
+<img src = "C:\Users\ahmed\OneDrive\Desktop\imag\cofee-beans.jpg" height = "200px" width = "1000px" alt = "Failed to load image." ALIGN = "TOP"/>
+<div id = "image_text">All About Coffee:</div>
+</div>
+</figure>
+<section id = "content_pane">
+<!--<div id = "home"></div>
+<div id = "brewing"></div>
+<div id = "roasting"></div>
+<div id = "grinding"></div>
+<div id = "drinks"></div>
+<div id = "coffee_survey"></div> -->
+<div id = "home"><a href = "coffee.html" style = "text-decoration:none;"><b><div id = "set-color-home">Home</div></b></a></div>
+<div id = "roasting"><a href = "roasting.html" style = "text-decoration:none;"><b><div id = "set-color-roasting">Roasting</div></b></a></div>
+<div id = "grinding"><a href = "grinding.html" style = "text-decoration:none;"><b><div id = "set-color-grinding">Grinding</div></b></a></div>
+<div id = "brewing"><a href = "brewing.html" style = "text-decoration:none;"><b><div id = "set-color-brewing">Brewing</div></b></a></div>
+<div id = "drinks"><a href = "drinks.html" style = "text-decoration:none;"><b><div id = "set-color-drinks">Drinks</div></b></a></div>
+<div id = "coffee_survey"><a href = "survey.html" style = "text-decoration:none;"><b><div id = "set-color-survey">Coffee Survey</div></b></a></div>
+</section >
+<section id = "material">
+<p id = "set_text">All About Coffee:</p>
+<img id = "TextWrap" src ="C:\Users\ahmed\OneDrive\Desktop\imag\coffee-cup.png" height = "150px" width = "150px" alt = "Failed to load image."/>
+<p id = "totheright"><b>We want to do a lot of stuff; we're not in great shape. We didn't get a good night's sleep. We're a little
+depressed. Coffee solves all these problems in one delightful little cup.</br></br> - Jerry Seinfeld</b></p>
+<div id = "aligned"> <p>Coffee preparation is the process of turning coffee beans into a beverage. While the particular steps vary with the type of coffee and with 
+the raw materials, the process includes four basic steps; raw coffee beans must be <span style = "color: #991D1D">roasted</span>, the roasted coffee beans 
+must then be <span  style = "color: #991D1D">ground</span>, the ground coffee must then be mixed with hot water for a certain time (<span style = "color: #991D1D">brewed</span>), and finally the 
+liquid coffee must be separated from the used grounds.</p> Coffee is usually brewed immediately before drinking. In most 
+areas, coffee may be purchased unprocessed, or already roasted, or already roasted and ground. Coffee is often vacuum 
+packed to prevent oxidation and lengthen its shelf life.</p> <p>To learn more about coffee, just browse our informative site,
+ or you can visit <a style = "color: #991D1D" href = "http://en.wikipedia.org/wiki/Coffee_preparation ">http://en.wikipedia.org/wiki/Coffee_preparation </a>wikipedia for even more. </p>
+</div>
+</section >
+<section id = "pane">
+<!--<div id = "home"></div>
+<div id = "brewing"></div>
+<div id = "roasting"></div>
+<div id = "grinding"></div>
+<div id = "drinks"></div>
+<div id = "coffee_survey"></div> -->
+<div id = "home2"><a href = "coffee.html" style = "text-decoration:none;"><b><div id = "home3">Home</div></b></a></div>
+<div id = "roasting2"><a href = "roasting.html" style = "text-decoration:none;"><b><div id = "roasting3">Roasting</div></b></a></div>
+<div id = "grinding2"><a href = "grinding.html" style = "text-decoration:none;"><b><div id = "grinding3">Grinding</div></b></a></div>
+<div id = "brewing2"><a href = "brewing.html" style = "text-decoration:none;"><b><div id= "brewing3">Brewing</div></b></a></div>
+<div id = "drinks2"><a href = "drinks.html" style = "text-decoration:none;"><b><div id = "drinks3">Drinks</div></b></a></div>
+<div id = "coffee_survey2"><a href = "survey.html" style = "text-decoration:none;"><b><div id = "survey3">Coffee Survey</div></b></a></div>
+</section >
+</div>
+</body>
+</html>
